--- a/front/src/components/Cards/styles.css
+++ b/front/src/components/Cards/styles.css
@@ -1,5 +1,5 @@
 .cards {
-  @apply flex flex-col w-[150px] h-[320px] justify-between p-6 
+  @apply flex flex-col w-[160px] h-[320px] justify-between p-4 
   bg-gradient-to-bl from-slate-500/30 to-slate-600/10 
-  border-2 border-y-red-600/50 border-x-rose-500/50 backdrop-blur-sm shadow-lg shadow-red-600/20 rounded-3xl;
+  border-2 border-y-red-600/50 border-x-rose-500/50 backdrop-blur-sm shadow-lg shadow-red-600/20 rounded-lg;
 } 
