--- a/front/src/components/Cards/styles.css
+++ b/front/src/components/Cards/styles.css
@@ -1,5 +1,9 @@
 .cards {
-  @apply flex flex-col w-[160px] h-[320px] justify-between p-4 
+  @apply flex flex-col w-[360px] h-auto justify-between p-6 
   bg-gradient-to-bl from-slate-500/30 to-slate-600/10 
-  border-2 border-y-red-600/50 border-x-rose-500/50 backdrop-blur-sm shadow-lg shadow-red-600/20 rounded-lg;
+  border-2 border-y-red-600/50 border-x-rose-500/50 backdrop-blur-sm shadow-md shadow-red-900 rounded-xl;
+
+  @media (min-width: 768px) {
+    width: 240px;
+  }
 } 
