--- a/front/src/components/SearchBar/styles.css
+++ b/front/src/components/SearchBar/styles.css
@@ -1,3 +1,9 @@
 .searchbar {
-  @apply flex self-end justify-between items-center w-[280px] py-1 px-4 backdrop-blur-sm bg-gradient-to-bl from-slate-500/30 to-slate-600/10 border-2 border-y-red-600/50 border-x-rose-500/50 shadow-red-600/50 shadow-lg rounded-full;
+  @apply flex justify-between items-center w-[90%] mx-[4%] py-1 px-4 backdrop-blur-sm bg-gradient-to-bl from-slate-500/30 to-slate-600/10 border-2 border-y-red-600/50 border-x-rose-500/50 shadow-red-600/50 shadow-lg rounded-full;
+
+  @media (min-width: 768px) {
+    align-self: end;
+    width: 17.5rem;
+    margin: 0;
+  }
 }
