--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -26,7 +26,7 @@
 body {
   min-height: 100vh;
   color: rgb(var(--foreground-rgb));
-  background-image: url('../assets/cinema.jpg');
+  background-image: url('../../public/cinema.jpg');
   /* ajuste a imagem de fundo */
   background-size: cover;
   background-position: center;
@@ -34,7 +34,6 @@ body {
 }
 
 input {
-  /* Remove default styles */
   border: none;
   outline: none;
   background: none;
@@ -44,30 +43,10 @@ input {
   font: inherit;
   color: inherit;
   cursor: inherit;
-  &:hover,
-  &:focus {
+
+  &:hover, &:focus {
     cursor: inherit;
   }
-}
-
-h1, h2, h3, h4, h5, h6, p {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-h2 {
-  font-size: 1.75rem;
-  font-weight: 700;
-
-  @media (min-width: 768px) {
-    font-size: 1rem;
-  }
-}
-
-p {
-  font-size: 1.5rem;
-  font-weight: 400;
 }
 
 @layer utilities {
